atualizações finais tcc - ajustes de texto e imagens - ajuste de escrita - add novas imagens - remoção de imagens

--- a/abntex2-options.bib
+++ b/abntex2-options.bib
@@ -226,12 +226,14 @@
  @MISC{
         bootsrap,
         TITLE = "Bootstrap",
+        year = {2021},
         HOWPUBLISHED = {Disponível em:\url{https://getbootstrap.com/}},
         }
         
  @MISC{
         javacript,
-        TITLE = "About javascript",
+        TITLE = "MDN Web Docs",
+         year = {2021},
         HOWPUBLISHED = {Disponível em:\url{https://developer.mozilla.
 org/en-US/docs/Web/JavaScript/About_JavaScript/}},
         }
@@ -240,12 +242,16 @@ org/en-US/docs/Web/JavaScript/About_JavaScript/}},
  @MISC{
         jquery,
         TITLE = "Jquery",
-        HOWPUBLISHED = {Disponível em:\url{https://jquery.com/}},
+        year = {2021},
+        HOWPUBLISHED = {Disponível
+        em:\url{https://jquery.com/}},
         }
         
  @MISC{
         json,
         TITLE = "JSON",
+        year = {2021},
+        url  =  {https://www.json.org/json-en.html/},
         HOWPUBLISHED = {Disponível em:\url{https://www.json.org/json-en.html/}},
         }
 
@@ -304,4 +310,50 @@ org/en-US/docs/Web/JavaScript/About_JavaScript/}},
   title={Business intelligence dashboard in decision making},
   author={Hansoti, Bhumika},
   year={2010}
+}
+
+@article{Yesudas,  author={Yesudas, M. and Menon, G. and Ramamurthy, V.},  journal={IBM Journal of Research and Development},   title={Intelligent operational dashboards for smarter commerce using big data},   year={2014},  volume={58},  number={5/6},  pages={13:1-13:10},  doi={10.1147/JRD.2014.2346131}}
+
+@article{zhou2013edge,
+  title={Edge bundling in information visualization},
+  author={Zhou, Hong and Xu, Panpan and Yuan, Xiaoru and Qu, Huamin},
+  journal={Tsinghua Science and Technology},
+  volume={18},
+  number={2},
+  pages={145--156},
+  year={2013},
+  publisher={TUP}
+}
+
+@ARTICLE{Sarikaya,
+  author={Sarikaya, Alper and Correll, Michael and Bartram, Lyn and Tory, Melanie and Fisher, Danyel},
+  journal={IEEE Transactions on Visualization and Computer Graphics}, 
+  title={What Do We Talk About When We Talk About Dashboards?}, 
+  year={2019},
+  volume={25},
+  number={1},
+  pages={682-692},
+  doi={10.1109/TVCG.2018.2864903}}
+  
+  @inproceedings{roberts2007state,
+  title={State of the art: Coordinated \& multiple views in exploratory visualization},
+  author={Roberts, Jonathan C},
+  booktitle={Fifth international conference on coordinated and multiple views in exploratory visualization (CMV 2007)},
+  pages={61--71},
+  year={2007},
+  organization={IEEE}
+}
+
+@mastersthesis{martin1995high,
+  title={High-dimensional brushing for interactive exploration of multivariate data.},
+  author={Martin, Allen Richard and Ward, Matthew O},
+  year={1995},
+  school={Worcester Polytechnic Institute.}
+}
+
+@article{kaplan2000balanced,
+  title={The Balanced Scorecard: Translating Strategy Into Action, Boston, MA: Harvard Business School Press},
+  author={Kaplan, R and Norton, D},
+  journal={Tambi{\'e}n en espa{\~n}ol editado por Gesti{\'o}n},
+  year={2000}
 }
